--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<link rel="shortcut icon" href="./favicon.png" />
 	
-	<title>Ave HTML Template</title>
+	<title>Blasteria</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
 	
