--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
-													<span class="txt">Services</span>
+													<span class="txt">About</span>
 												</span>
 											</a>
 										</li>
