--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="theme-color" content="#3ed2a7">
+	<meta name="theme-color" content="#302260">
 	
 	<link rel="shortcut icon" href="./favicon.png" />
 	
@@ -37,12 +37,12 @@
 							
 							<div class="col-auto pr-5">
 								<div class="navbar-header">
-									<a class="navbar-brand" href="index-creative.html" rel="home">
+									<a class="navbar-brand" href="index.html" rel="home">
 										<span class="navbar-brand-inner">
-											<img class="logo-dark" src="./assets/img/logo/logo-1.svg" alt="Ave HTML Template">
-											<img class="logo-sticky" src="./assets/img/logo/logo-1.svg" alt="Ave HTML Template">
-											<img class="mobile-logo-default" src="./assets/img/logo/logo-1.svg" alt="Ave HTML Template">
-											<img class="logo-default" src="./assets/img/logo/logo-1.svg" alt="Ave HTML Template">
+											<img class="logo-dark" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template"> 
+											<img class="logo-sticky" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
+											<img class="mobile-logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
+											<img class="logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
 										</span>
 									</a>
 									<button type="button" class="navbar-toggle collapsed nav-trigger style-mobile" data-toggle="collapse" data-target="#main-header-collapse" aria-expanded="false" data-changeclassnames='{ "html": "mobile-nav-activated overflow-hidden" }'>
@@ -76,7 +76,7 @@
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
-													<span class="txt">Works</span>
+													<span class="txt">Technology</span>
 												</span>
 											</a>
 										</li>
@@ -85,7 +85,7 @@
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
-													<span class="txt">Technology</span>
+													<span class="txt">Services</span>
 												</span>
 											</a>
 										</li>
