added icon and top section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#302260">
 	
-	<link rel="shortcut icon" href="./favicon.png" />
+	<link rel="shortcut icon" href="./blasteria-icon.png" />
 	
 	<title>Blasteria</title>
 
@@ -39,10 +39,10 @@
 								<div class="navbar-header">
 									<a class="navbar-brand" href="index.html" rel="home">
 										<span class="navbar-brand-inner">
-											<img class="logo-dark" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template"> 
-											<img class="logo-sticky" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
-											<img class="mobile-logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
-											<img class="logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Ave HTML Template">
+											<img class="logo-dark" src="./assets/img/logo/blasteria-logo.png" alt="Blasteria"> 
+											<img class="logo-sticky" src="./assets/img/logo/blasteria-logo.png" alt="Blasteria">
+											<img class="mobile-logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Blasteria">
+											<img class="logo-default" src="./assets/img/logo/blasteria-logo.png" alt="Blasteria">
 										</span>
 									</a>
 									<button type="button" class="navbar-toggle collapsed nav-trigger style-mobile" data-toggle="collapse" data-target="#main-header-collapse" aria-expanded="false" data-changeclassnames='{ "html": "mobile-nav-activated overflow-hidden" }'>
@@ -72,7 +72,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="#works">
+											<a href="#technology">
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
@@ -81,11 +81,11 @@
 											</a>
 										</li>
 										<li>
-											<a href="#services">
+											<a href="#values">
 												<span class="link-icon"></span>
 												<span class="link-txt">
 													<span class="link-ext"></span>
-													<span class="txt">Services</span>
+													<span class="txt">Values</span>
 												</span>
 											</a>
 										</li>
@@ -127,9 +127,9 @@
 
 							<div class="header-module">
 
-								<a href="#" target="_blank" class="btn btn-default text-uppercase circle btn-bordered border-thick font-size-12 font-weight-semibold btn-white">
+								<a href="https://drive.google.com/file/d/1aGi_DlB0ji49WAOZ-2NvOODtCUxamUwt/view?usp=sharing" target="_blank" class="btn btn-default text-uppercase circle btn-bordered border-thick font-size-12 font-weight-semibold btn-white">
 									<span>
-										<span class="btn-txt">Join to Download</span>
+										<span class="btn-txt">Learn More</span>
 									</span>
 								</a>
 
@@ -173,7 +173,7 @@
 								data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":1200,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"scale":1},"animations":{"scale":1}}'
 								data-split-options='{"type":"lines"}'
 							>
-								<span class="ld-fh-txt"> Adventures in creative age</span>
+								<span class="ld-fh-txt">Killing Bacteria with Ultrasound.</span>
 							</h1>
 						</div><!-- /.ld-fancy-heading -->
 
@@ -183,7 +183,7 @@
 								data-custom-animations="true"
 								data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":1200,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"scale":1},"animations":{"scale":1}}'
 								data-split-options='{"type":"lines"}'>
-								<span class="ld-fh-txt"> We believe that designing products and services in close partnership with our clients is the only way to have a real impact on their business.</span>
+								<span class="ld-fh-txt">[insert blurb about us]</span>
 							</p>
 						</div><!-- /.ld-fancy-heading -->
 						
@@ -193,23 +193,9 @@
 
 								<a href="#" class="btn btn-solid text-uppercase circle btn-bordered border-thin font-size-14 font-weight-semibold" data-localscroll="true" data-localscroll-options='{"scrollBelowSection":true}'>
 									<span>
-										<span class="btn-txt">Start a project</span>
+										<span class="btn-txt">See how we're doing it...</span>
 									</span>
 								</a>
-
-							</div><!-- /.col-sm-6 -->
-
-							<div class="lqd-column col-sm-6">
-
-								<div class="ld-fancy-heading">
-									<p>
-										<span class="ld-fh-txt">
-											<strong><span style="color: #fe688b">Call us (0123) 456 – 789</span></strong>
-											<br>
-											<span style="color: #a7a9b8">For any question or concern</span>
-										</span>
-									</p>
-								</div>
 
 							</div><!-- /.col-sm-6 -->
 
@@ -252,8 +238,8 @@
 
 						<header class="fancy-title" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":1200,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"translateX":-32,"opacity":0},"animations":{"translateX":0,"opacity":1}}'>
 
-							<h6 class="text-uppercase ltr-sp-2 font-size-12 font-weight-semibold text-secondary">About Ave Agency</h6>
-							<h2 class="mt-md-4 pr-md-7 mb-4">Ultimate experiences with story, emotion and purpose</h2>
+							<h6 class="text-uppercase ltr-sp-2 font-size-12 font-weight-semibold text-secondary">About Blasteria</h6>
+							<h2 class="mt-md-4 pr-md-7 mb-4">Target, Image, Destroy.</h2>
 	
 							<div class="row">
 	
@@ -288,7 +274,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<p class="font-size-14">
-										<strong>UI / UX</strong>
+										<strong>TARGET</strong>
 									</p>
 								</div><!-- /.contents -->
 
@@ -303,7 +289,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<p class="font-size-14">
-										<strong>ECOMMERCE</strong>
+										<strong>IMAGE</strong>
 									</p>
 								</div><!-- /.contents -->
 
@@ -318,7 +304,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<p class="font-size-14">
-										<strong>BRANDING</strong>
+										<strong>BLAST</strong>
 									</p>
 								</div><!-- /.contents -->
 
@@ -332,7 +318,7 @@
 			</div><!-- /.container -->
 		</section><!-- /.vc_row -->
 
-		<section class="vc_row pt-80 pb-120" id="works">
+		<section class="vc_row pt-80 pb-120" id="technology">
 			<div class="container">
 				<div class="row">
 
@@ -342,7 +328,7 @@
 
 								<div
 									class="row liquid-portfolio-list-row"
-									data-columns="3"
+									data-columns="1"
 									data-liquid-masonry="true"
 									data-masonry-options='{ "layoutMode": "masonry", "alignMid": true }'
 									data-custom-animations="true"
@@ -613,7 +599,7 @@
 			</div><!-- /.container -->
 		</section>
 
-		<section class="vc_row pt-30 pb-60" id="services">
+		<section class="vc_row pt-30 pb-60" id="values">
 			<div class="container">
 				
 				<div class="row">
