added our team details

--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
 									<div class="liquid-img-group-single" data-roundness="4">
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-container-inner" data-parallax="true" data-parallax-from='{"translateY":47}' data-parallax-to='{"translateY":-74}' data-parallax-options='{"overflowHidden": false, "easing": "linear"}'>
+												<figure>
+													<img src="" alt="Team Member"/>
+												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
 									</div><!-- /.liquid-img-group-single -->
@@ -605,6 +608,9 @@
 									<div class="liquid-img-group-single" data-roundness="4">
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-container-inner" data-parallax="true" data-parallax-from='{"translateY":167}' data-parallax-to='{"translateY":-151}' data-parallax-options='{"overflowHidden": false, "easing": "linear"}'>
+												<figure>
+													<img src="" alt="Team Member"/>
+												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
 									</div><!-- /.liquid-img-group-single -->
@@ -619,17 +625,11 @@
 
 						<header class="fancy-title mb-60">
 
-							<h6 class="text-uppercase ltr-sp-2 font-size-12 font-weight-semibold text-secondary">OUR COMMUNITY</h6>
-							<h2 class="mt-4 mb-4">We are optimists who love to work together</h2>
-							<p>Take your career to next level. Apply to our team and see what we can do together. You’re good enough, right ?</p>
+							<h6 class="text-uppercase ltr-sp-2 font-size-12 font-weight-bold text-secondary">OUR TEAM</h6>
+							<h2 class="mt-2 mb-4">We're a group of highschoolers changing the face of medicine</h2>
+							<p>We're all passionate about the opportunity that biology holds. We believe in the potential it has to shape our future as we know it.</p>
 
 						</header><!-- /.fancy-title -->
-
-						<a href="#" class="btn btn-solid text-uppercase circle btn-bordered border-thin font-size-14 font-weight-semibold" data-localscroll="true" data-localscroll-options='{"scrollBelowSection":true}'>
-							<span>
-								<span class="btn-txt">Join the team</span>
-							</span>
-						</a>
 
 					</div><!-- /.col-md-7 -->
 
@@ -645,15 +645,15 @@
 
 						<header class="fancy-title fancy-title-big mb-6">
 							<h2 data-split-text="true" data-split-options='{"type":"lines"}'>
-								Let’s create something extraordinary
+								Let’s prevent the next big crisis
 								<br>
-								<span class="font-size-2-15x lh-15 text-primary" data-fittext="true" data-fittext-options='{ "maxFontSize": 70, "minFontSize": 40, "compressor": 0.5 }'>together</span>
+								<span class="font-size-2-15x lh-15 text-primary" data-fittext="true" data-fittext-options='{ "maxFontSize": 70, "minFontSize": 40, "compressor": 0.5 }'>together.</span>
 							</h2>
 						</header><!-- /.fancy-title -->
 
-						<a href="#" class="btn btn-solid text-uppercase circle btn-bordered border-thin font-size-14 font-weight-semibold" data-localscroll="true" data-localscroll-options='{"scrollBelowSection":true}'>
+						<a href="https://www.notion.so/contact-page-blasteria-0e3f6840372341b59603c32e18243f71" class="btn btn-solid text-uppercase circle btn-bordered border-thin font-size-14 font-weight-semibold" data-localscroll="true" data-localscroll-options='{"scrollBelowSection":true}'>
 							<span>
-								<span class="btn-txt">Start a project</span>
+								<span class="btn-txt">Connect With Us</span>
 							</span>
 						</a>
 						
