minor tweaks and changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#302260">
 	
-	<link rel="shortcut icon" href="./blasteria-icon.png" />
+	<link rel="shortcut icon" href="./assets/img/logo/cone-icon.svg" />
 	
 	<title>Blasteria</title>
 
@@ -54,9 +54,9 @@
 									<a class="navbar-brand" href="index.html" rel="home">
 										<span class="navbar-brand-inner">
 											<img class="logo-dark" src="./assets/img/logo/blasteria-logo-white.png" alt="Blasteria"> 
-											<img class="logo-sticky" src="./assets/img/logo/blasteria-logo-dark.png" alt="Blasteria">
-											<img class="mobile-logo-default" src="./assets/img/logo/blasteria-logo-dark.png" alt="Blasteria">
-											<img class="logo-default" src="./assets/img/logo/blasteria-logo-dark.png" alt="Blasteria">
+											<img class="logo-sticky" src="./assets/img/logo/cone-icon.svg" alt="Blasteria">
+											<img class="mobile-logo-default" src="./assets/img/logo/blasteria-logo-dark.svg" alt="Blasteria">
+											<img class="logo-default" src="./assets/img/logo/blasteria-logo-dark.svg" alt="Blasteria">
 										</span>
 									</a>
 									<button type="button" class="navbar-toggle collapsed nav-trigger style-mobile" data-toggle="collapse" data-target="#main-header-collapse" aria-expanded="false" data-changeclassnames='{ "html": "mobile-nav-activated overflow-hidden" }'>
@@ -181,7 +181,7 @@
 								data-custom-animations="true"
 								data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":1200,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"scale":1},"animations":{"scale":1}}'
 								data-split-options='{"type":"lines"}'>
-								<span class="ld-fh-txt">At Blasteria, we are using cutting-edge ultrasound technology to blast and destroy antibiotic-resistant bacteria with pandemic potential.</span>
+								<span class="ld-fh-txt">At <strong>Blasteria</strong>, we are using cutting-edge ultrasound technology to blast and destroy antibiotic-resistant bacteria with pandemic potential.</span>
 							</p>
 						</div><!-- /.ld-fancy-heading -->
 						
@@ -251,7 +251,7 @@
 								</div><!-- /.col-sm-2 -->
 	
 								<div class="lqd-column col-sm-10 col-xs-12">
-									<p>With the use of microbubbles and ultrasound imaging, we are able to pinpoint the precise location of harmful bacteria in the body. Once we’ve located the site of infection, we send in High Intensity Focused Ultrasound (HIFU) waves to destroy the bacteria with mechanical force. This way, the bacteria aren't able to mutate and evolve to overcome our treatment.</p>
+									<p>With the use of microbubbles and ultrasound imaging, we are able to pinpoint the precise location of harmful bacteria in the body. Once we’ve located the site of infection, we send in <strong>High Intensity Focused Ultrasound (HIFU)</strong> waves to destroy the bacteria with mechanical force. This way, the bacteria aren't able to mutate and evolve to overcome our treatment.</p>
 								</div><!-- /.col-sm-10 -->
 							
 							</div><!-- /.row -->
@@ -288,7 +288,7 @@
 								</div><!-- /.iconbox-icon-wrap -->
 								<div class="contents">
 									<p class="font-size-14">
-										<strong>ULTRASOUND</strong>
+										<strong>HIFU WAVES</strong>
 									</p>
 								</div><!-- /.contents -->
 
@@ -490,7 +490,7 @@
 						<header class="fancy-title text-center mb-75" data-custom-animations="true" data-ca-options='{"triggerHandler":"inview","animationTarget":"all-childs","duration":1200,"delay":100,"initValues":{"translateY":80,"opacity":0},"animations":{"translateY":0,"opacity":1}}'>
 
 							<h6 class="text-uppercase ltr-sp-2 font-size-12 font-weight-semibold text-secondary">AT BLASTERIA</h6>
-							<h2 class="mt-4 mb-4">WE PREVENT PANDEMICS.</h2>
+							<h2 class="mt-2 mb-4">WE PREVENT PANDEMICS.</h2>
 
 							<div class="row">
 								<div class="lqd-column col-md-6 col-md-offset-3 px-md-5">
@@ -705,7 +705,9 @@
 					<div class="lqd-column col-md-6 col-md-offset-3 text-center">
 	
 						<figure class="mb-40">
-							<img src="./assets/img/logo/blasteria-logo-dark-slogan.png" alt="Logo">
+							<a href="#content">
+								<img src="./assets/img/logo/blasteria-logo-dark-slogan.svg" alt="Logo">
+							</a>
 						</figure>
 
 						<p>© 2021 Blasteria. All Rights Reserved.</p>
