fixed logo and random text from about-us section

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 						<div class="iconbox iconbox-side iconbox-semiround iconbox-shadow iconbox-heading-sm iconbox-filled" id="ld_icon_box_5c4e9c4475e70" data-plugin-options='{"color":"#f9b851"}'>
 							<div class="iconbox-icon-wrap">
 								<span class="iconbox-icon-container">
-									<img src="./assets/img/svg/thinking.svg">
+									<img src="./assets/img/svg/thinking.svg"/>
 								</span>
 							</div><!-- /.iconbox-icon-container -->
 							<div class="contents">
@@ -559,7 +559,7 @@
 						<div class="iconbox iconbox-side iconbox-semiround iconbox-shadow iconbox-heading-sm iconbox-filled" id="ld_icon_box_5c4e9c4475e71" data-plugin-options='{"color":"#fe688b"}'>
 							<div class="iconbox-icon-wrap">
 								<span class="iconbox-icon-container">
-									<img src="./assets/img/svg/speed.svg">
+									<img src="./assets/img/svg/speed.svg"/>
 								</span>
 							</div><!-- /.iconbox-icon-container -->
 							<div class="contents">
@@ -590,7 +590,7 @@
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-container-inner" data-parallax="true" data-parallax-from='{"translateY":47}' data-parallax-to='{"translateY":-74}' data-parallax-options='{"overflowHidden": false, "easing": "linear"}'>
 												<figure>
-													<img src="" alt="Team Member"/>
+													<img src=""/>
 												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
@@ -604,7 +604,7 @@
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-container-inner" data-parallax="true" data-parallax-from='{"translateY":83}' data-parallax-to='{"translateY":-94}' data-parallax-options='{"overflowHidden": false, "easing": "linear"}'>
 												<figure>
-													<img src="./assets/img/about-headshots.png" alt="Team Member"/>
+													<img src="./assets/img/about-headshots.png"/>
 												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
@@ -618,7 +618,7 @@
 										<div class="liquid-img-group-img-container">
 											<div class="liquid-img-container-inner" data-parallax="true" data-parallax-from='{"translateY":167}' data-parallax-to='{"translateY":-151}' data-parallax-options='{"overflowHidden": false, "easing": "linear"}'>
 												<figure>
-													<img src="" alt="Team Member"/>
+													<img src=""/>
 												</figure>
 											</div><!-- /.liquid-img-container-inner -->
 										</div><!-- /.liquid-img-group-img-container -->
