--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								data-custom-animations="true"
 								data-ca-options='{"triggerHandler":"inview","animationTarget":".split-inner","duration":1200,"delay":100,"easing":"easeOutQuint","direction":"forward","initValues":{"scale":1},"animations":{"scale":1}}'
 								data-split-options='{"type":"lines"}'>
-								<span class="ld-fh-txt">At <strong>Blasteria</strong>, we are using cutting-edge ultrasound technology to blast and destroy antibiotic-resistant bacteria with pandemic potential.</span>
+								<span class="ld-fh-txt">At Blasteria, we are using cutting-edge ultrasound technology to blast and destroy antibiotic-resistant bacteria with pandemic potential.</span>
 							</p>
 						</div><!-- /.ld-fancy-heading -->
 						
